tests/integration/pilot/tunneling/external-app/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-app
spec:
  hosts:
  - external-app.testdomain
  location: MESH_EXTERNAL
  ports:
  - number: 8080
    name: tcp
    protocol: TCP
  - number: 443
    name: tls
    protocol: TLS
  resolution: DNS
