tests/integration/pilot/tunneling/external-app/ssl-certificate-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: external-app-ssl-certificate
data:
  external-app.testdomain.crt: |-
    -----BEGIN CERTIFICATE-----
    MIICujCCAaICAQAwDQYJKoZIhvcNAQELBQAwIjEgMB4GA1UEAwwXZXh0ZXJuYWwt
[...]
    oow2Iy9n3iDIwMQCmeou9zXUmnsbZGfynB56la5E
    -----END CERTIFICATE-----
