tests/integration/pilot/tunneling/external-app/ssl-private-key-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: external-app-ssl-private-key
data:
  external-app.testdomain.key: |-
    -----BEGIN PRIVATE KEY-----
    MIIEugIBADANBgkqhkiG9w0BAQEFAASCBKQwggSgAgEAAoIBAQDLGTefbn6wNAuw
[...]
    vV7IPcXjFORonOFqBgw=
    -----END PRIVATE KEY-----
